# HeyApple

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Info.plist.in.in  extensionmanager.h  extensionmanager.mm  main.cpp
extension/: CMakeLists.txt  Info.plist.in.in  filterdataprovider.mm  main.mm
sign/: App.entitlements.in  Extension.entitlements.in  mac_codesign
